--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 azure-identity==1.19.0
 Django==5.1.1
+djangorestframework==3.15.2
+django-cors-headers==4.6.0
 pyodbc==5.2.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
