--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,6 @@ Django==5.1.1
 djangorestframework==3.15.2
 django-cors-headers==4.6.0
 pyodbc==5.2.0
+pytest==8.3.3
 sqlparse==0.5.1
 typing_extensions==4.12.2
