--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,5 +7,6 @@ djangorestframework==3.15.2
 django-cors-headers==4.6.0
 pyodbc==5.2.0
 pytest==8.3.3
+SQLAlchemy==2.0.36
 sqlparse==0.5.1
 typing_extensions==4.12.2
