Set deploy action working directory to backend

--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -66,6 +66,9 @@ jobs:
             !venv/
 
   deploy:
+    defaults:
+      run:
+        working-directory: ./backend
     permissions:
       contents: none
     runs-on: ubuntu-latest
