--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ coverage==7.6.7
 Django==5.1.1
 djangorestframework==3.15.2
 django-cors-headers==4.6.0
+gunicorn==23.0.0
 pyodbc==5.2.0
 pytest==8.3.3
 SQLAlchemy==2.0.36
