--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,14 @@
 services:
   backend:
-    image: campusmarket3.azurecr.io/campusmarket-backend
+    image: campusmarket.azurecr.io/campusmarket-backend
     build: ./backend
-    networks:
-      - mynetwork
     ports:
       - "8000:8000"
     environment:
       AZURE_PASSWORD: ${AZURE_PASSWORD}
       DJANGO_SECRET: ${DJANGO_SECRET}
-    command: bash -c "python manage.py runserver 0.0.0.0:8000"
   frontend:
-    image: campusmarket3.azurecr.io/campusmarket-frontend
+    image: campusmarket.azurecr.io/campusmarket-frontend
     build: ./frontend
-    networks:
-      - mynetwork
     ports:
       - "3000:3000"
-networks:
-  mynetwork:
-    driver: bridge
